examples/experimental/v1beta1/http-redirect-rewrite/httproute-redirect-https.yaml
#$ Used in:
#$ - site-src/api-types/httproute.md
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-filter-redirect
spec:
  hostnames:
    - redirect.example
  rules:
    - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
      backendRefs:
      - name: example-svc
        weight: 1
        port: 80
