examples/experimental/v1beta1/http-redirect-rewrite/httproute-redirect-prefix.yaml
#$ Used in:
#$ - site-src/api-types/httproute.md
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-filter-redirect
spec:
  hostnames:
    - redirect.example
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /cayenne
      filters:
      - type: RequestRedirect
        requestRedirect:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /paprika
          statusCode: 302
      backendRefs:
      - name: example-svc
        weight: 1
        port: 80
